--- a/package.json
+++ b/package.json
@@ -42,10 +42,12 @@
     "posttest": "yarn run lint"
   },
   "devDependencies": {
+    "@graphql-tools/schema": "^9.0.12",
     "@graphql-tools/utils": "^9.1.3",
     "@types/node": "^16.18.8",
     "graphql": "^16.6.0",
     "gts": "^3.1.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   },
   "peerDependencies": {
