--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,3 @@
 {
-    "conventionalCommits.scopes": [
-        "common",
-        "assets",
-        "tests",
-        "directives"
-    ]
+  "conventionalCommits.scopes": ["common", "assets", "tests", "directives"]
 }
