fix: :construction_worker: exclude test files from compiled output

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,5 +4,6 @@
     "rootDir": ".",
     "outDir": "build"
   },
-  "include": ["src/**/*.ts", "test/**/*.ts"]
+  "exclude": ["**/*.spec.ts", "jest.config.ts", "**/*.test.ts"],
+  "include": ["src/**/*.ts"]
 }
