build(dev-deps): :heavy_plus_sign: add @types/node

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-  "conventionalCommits.scopes": ["common", "assets", "tests", "directives"]
+  "conventionalCommits.scopes": [
+    "common",
+    "assets",
+    "tests",
+    "directives",
+    "dev-deps"
+  ]
 }
