--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "devDependencies": {
     "@graphql-tools/schema": "^9.0.12",
     "@graphql-tools/utils": "^9.1.3",
+    "@types/dateformat": "^5.0.0",
     "@types/node": "^16.11.7",
     "graphql": "^16.6.0",
     "gts": "^3.1.0",
@@ -52,6 +53,7 @@
   },
   "peerDependencies": {
     "@graphql-tools/utils": "^9.1.3",
+    "dateformat": "^5.0.3",
     "graphql": "^16.6.0"
   }
 }
